<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Skillfy</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="not_stable_internet_text">It seems like you are not connected to a stable internet connection.</string>
    <string name="error_on_screen_text">There is an error on this page. Please try again.</string>
    <string name="request_failed_retry">Request failed. Please retry!</string>
    <string name="no_internet">No Internet!!!</string>
    <string name="oops">Oops!!!</string>
    <string name="oh_snap">Oh snap!!!</string>
    <string name="prompt_email">Email</string>
    <string name="enter_email">Please enter email address</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_valid_name">Please enter valid name</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="enter_valid_phone_number">Please enter valid phone number</string>
    <string name="select">Select</string>
    <string name="select_category_subheading_text">Tap on the categories to select the content presented to you</string>
    <string name="continue_text">Continue</string>
    <string name="major_selected">Major Selected</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up!</string>
    <string name="google">Google</string>
    <string name="via_otp">Via OTP</string>
    <string name="or">Or</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password2">Forgot password</string>
    <string name="or_continue_as_a">or continue as a</string>
    <string name="or_continue_as_a_guest">Or continue as a Guest User</string>
    <string name="guest_user">Guest User</string>
    <string name="enter_your_phone_number_and_we_will_send_you_an_otp_to_verify">Enter your phone number and we will send you an OTP to verify</string>
    <string name="login_via_otp">Login via OTP</string>
    <string name="phone_number">Enter phone number</string>
    <string name="verify_with_otp">Verify with OTP</string>
    <string name="enter_4_digit_number_that_sent_to_your_number">Enter 4 digit number that was sent to your mobile</string>
    <string name="forgot_pass_desc_text">Enter the Email/Mobile number associated with your account and we’ll send an OTP to your Email/Mobile number to reset your password</string>
    <string name="reset">Reset</string>
    <string name="continues">Continue</string>
    <string name="check_your_mail">Check Email</string>
    <string name="check_your_mail_sms">Check Mail Or SMS</string>
    <string name="enable_visually_impaired_mode">Enable Visually Impaired Mode</string>
    <string name="enable_screen_reading_mode">Enable Screen Reading View</string>
    <string name="enable_disable_screen_reading_mode">Enable/Disable Screen Reading Mode</string>
    <string name="disable_screen_reading_mode">Disable Screen Reading Mode</string>
    <string name="enable_screen_reading_mode_desc">In screen reading mode, the user can hear the functions of app and the courses. \n
Settings -> Accessibility -> Talkback</string>
    <string name="disable_screen_reading_mode_desc">Screen reading mode is currently enabled. Do you want to disable this service?</string>
    <string name="sign_in_to_continue_your_account">Login to continue to your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_registering_you_are_accepting_privacy_policy_and_terms_of_use">By registering you are accepting “Privacy Policy” and “Terms &amp; Conditions”</string>
    <string name="you_are_accepting_terms_of_conditions_for_creator">You are accepting ”Terms &amp; Conditions” of creator.</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_valid_otp">Please enter valid OTP</string>
    <string name="please_enter_new_password">Please enter New Password</string>
    <string name="please_enter_confirm_password">Please enter confirm Password</string>
    <string name="please_enter_dob">Please enter DOB</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="please_enter_state">Please enter state</string>
    <string name="please_enter_bio">Please enter bio</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="permission_denied">This app needs you to allow this permission in order to function. Please go to settings and allow them.</string>
    <string name="login">Login</string>
    <string name="alert">Alert</string>
    <string name="alerte">Alert!</string>
    <string name="hey_guest">Hey! Guest</string>
    <string name="you_need_to_login_first">"You don\'t have permission to view this feature. To proceed Login or Signup!"</string>
    <string-array name="walkthrough_title">
        <item>Scale up your skill</item>
        <item>Find your favourite courses</item>
        <item>Get certifications for courses</item>
    </string-array>
    <string-array name="preference_selected_title">
        <item>Categories selected</item>
        <item>Theme selected</item>
        <item>Font selected</item>
        <item>Selected language</item>
    </string-array>
    <string-array name="walkthrough_description">
        <item>Anyone can join the millions of members on our platform to learn cutting-edge skills</item>
        <item>Anyone can join the millions of members on our platform to learn cutting-edge skills</item>
        <item>You can get certification for the courses and can download your certificate.</item>
    </string-array>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="become_a_moderator">Become A Moderator</string>
    <string name="add_a_new_card">Add a new card</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="about_us">About Us</string>
    <string name="support">Support</string>
    <string name="terms_amp_condtions"><![CDATA[Terms & Conditions]]></string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="provide_your_old_password">Provide Your Old Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password_and_confirm_it">Enter new password and confirm it</string>
    <string name="update_password">Update password</string>
    <string name="you_have_to_login_on_all_devices_again">You have to login on all devices again</string>
    <string name="log_me_out_from_the_all_devices">Log me out from the all devices</string>
    <string name="name">Name</string>
    <string name="rewards_points">Rewards Points</string>
    <string name="courses">Courses</string>
    <string name="logout">Log out</string>
    <string name="log_out">Log out</string>
    <string name="delete_acc">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="save">Save</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="download">Download</string>
    <string name="download_certificate">Download Certifiate</string>
    <string name="downloads">Downloads</string>
    <string name="hello_welcome">Hello! Welcome</string>
    <string name="enter_phone_email">Enter Email/Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="submitted">Submitted</string>
    <string name="finish">Finish</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="select_all">Select All</string>
    <string name="take_photo">Take Photo</string>
    <string name="download_cer_of_comp">Download Certificate of Completion(Sample)</string>
    <string name="download_cer_of_appre">Download Certificate of Achievement(Sample)</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="resend_code_in">Resend Code : </string>
    <string name="resend_otp">Resend Code</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_category">Select Category</string>
    <string name="select_theme">Select Theme</string>
    <string name="select_theme_subtext">Tap on a color theme you want to select and the whole app colour will be updated accordingly</string>
    <string name="select_font">Select Font</string>
    <string name="select_font_subtext">Tap on a font type you want to select and the whole app text will be updated accordingly</string>
    <string name="select_language">Select Language</string>
    <string name="select_language_subtext">Tap on a language you want to select and the whole app language will be updated accordingly</string>
    <string name="select_language_desc">Tap On languages you want to select</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="roboto_font">Roboto Sans</string>
    <string name="ibm_font">IBM Plex Sans</string>
    <string name="worksans_font">Work Sans</string>
    <string name="english_language">English</string>
    <string name="kannada_language">ಕನ್ನಡ (Kannada)</string>
    <string name="tamil_language">தமிழ் (Tamil)</string>
    <string name="telugu_language">తెలుగు (Telugu)</string>
    <string name="bengali_language">বাংলা (Bengali)</string>
    <string name="hindi_language">हिंदी (Hindi)</string>
    <string-array name="font_name_array">
        <item>@string/roboto_font</item>
        <item>@string/ibm_font</item>
        <item>@string/worksans_font</item>

    </string-array>
    <string-array name="language_array">
        <item>@string/english_language</item>
        <item>@string/hindi_language</item>
        <item>@string/telugu_language</item>
        <item>@string/tamil_language</item>
        <item>@string/kannada_language</item>
        <item>@string/bengali_language</item>

    </string-array>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_font">Change Font</string>
    <string name="wallet_history">Wallet History</string>
    <string name="delete">Delete</string>
    <string name="change_categories">Change Categories</string>
    <string name="add_answer_as">Add Answer</string>
    <string name="text">Text</string>
    <string name="enter_answer_here">Enter Answer here</string>
    <string name="image">Image</string>
    <string name="upload_image_as_an_answer">Upload image as an answer</string>
    <string name="add_coauthor">Add CoAuthor</string>
    <string name="read_aloud">Read Aloud</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="about_title">About</string>
    <string name="shortcut_short_label">Toggle</string>
    <string name="shortcut_long_label">Toggle Recording</string>
    <string name="shortcut_disabled_message">Toggle Disabled</string>
    <string name="licences_title">Licenses</string>
    <string name="revenue_">Revenue</string>
</resources>