<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/action_course"
        android:enabled="true"
        android:icon="@drawable/ic_course"
        android:title="@string/courses" />
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:title="@string/add" />
    <item
        android:id="@+id/action_download"
        android:enabled="true"
        android:icon="@drawable/ic_download"
        android:title="@string/download" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />
</menu>