<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_read"
        android:icon="@drawable/ic_screen_reading_mode"
        android:title="@string/read_aloud"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/add_co_author"
        android:icon="@drawable/ic_add_author"
        android:title="@string/add_coauthor"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_menu"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="always" />


</menu>