<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.selflearningcoursecreationapp.utils.screenRecorder.home.ScreenRecorderHomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home_video_recording">
        <action
            android:id="@+id/action_home_to_about"
            app:destination="@id/about" />
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settings" />
        <action
            android:id="@+id/action_home_to_bottomNavigationDialog"
            app:destination="@id/navigation_dialog" />
        <action
            android:id="@+id/action_home_to_moreSettingsDialog"
            app:destination="@id/more_settings_dialog" />
    </fragment>
    <dialog
        android:id="@+id/navigation_dialog"
        android:name="com.selflearningcoursecreationapp.utils.screenRecorder.home.BottomNavigationDialog" />
    <dialog
        android:id="@+id/more_settings_dialog"
        android:name="com.selflearningcoursecreationapp.utils.screenRecorder.home.MoreSettingsDialog" />
    <fragment
        android:id="@+id/about"
        android:name="com.selflearningcoursecreationapp.utils.screenRecorder.about.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about_video">
        <action
            android:id="@+id/action_about_to_privacy_policy"
            app:destination="@id/privacy_policy" />
        <action
            android:id="@+id/action_about_to_licenses"
            app:destination="@id/licenses" />
    </fragment>
    <fragment
        android:id="@+id/privacy_policy"
        android:name="com.selflearningcoursecreationapp.utils.screenRecorder.about.PrivacyPolicyFragment"
        android:label="@string/privacy_policy_title"
        tools:layout="@layout/fragment_privacy_policy" />
    <fragment
        android:id="@+id/settings"
        android:name="com.selflearningcoursecreationapp.utils.screenRecorder.settings.RecorderSettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/licenses"
        android:name="com.selflearningcoursecreationapp.utils.screenRecorder.about.LicensesFragment"
        android:label="@string/licences_title" />

</navigation>