<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handleClick"
            type="com.selflearningcoursecreationapp.utils.HandleClick" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/screenBackgroundColor"
        android:fillViewport="true"
        android:overScrollMode="never"
        tools:context=".ui.bottom_more.MoreFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_changePassword"
            spanText="@{@string/change_password}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_33sdp"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            android:text="@string/change_password"
            app:drawableStartCompat="@drawable/ic_key_password"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_language"
            spanText="@{@string/change_language}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingVertical="@dimen/_30sdp"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:text="@string/change_language"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            app:drawableStartCompat="@drawable/ic_world_language"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_category"
            spanText="@{@string/change_categories}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            android:text="@string/change_categories"
            app:drawableStartCompat="@drawable/ic_dashboard"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_theme"
            spanText="@{@string/change_theme}"
            android:layout_width="match_parent"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            android:text="@string/change_theme"
            app:drawableStartCompat="@drawable/ic_change_theme"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_font"
            spanText="@{@string/change_font}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:text="@string/change_font"
            app:drawableStartCompat="@drawable/ic_change_font"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_about_us"
            spanText="@{@string/about_us}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:text="@string/about_us"

            app:drawableStartCompat="@drawable/ic_info"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_privacy_policy"
            spanText="@{@string/privacy_policy}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:text="@string/privacy_policy"
            app:drawableStartCompat="@drawable/ic_privacy_policy"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_support"
            spanText="@{@string/support}"
            android:layout_width="match_parent"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:text="@string/support"

            app:drawableStartCompat="@drawable/ic_support"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_terms_and_conditions"
            spanText="@{@string/terms_amp_condtions}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line_grey"
            android:drawablePadding="@dimen/_10sdp"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:text="@string/terms_amp_condtions"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            app:drawableStartCompat="@drawable/ic_security"
            app:primaryIconTint="start" />

        <com.selflearningcoursecreationapp.utils.customViews.LMSTextView
            android:id="@+id/tv_help"
            spanText="@{@string/help}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            app:fontType="regular"
            app:primaryIconTint="start"
            android:drawablePadding="@dimen/_10sdp"
            android:onClickListener="@{(v)->handleClick.onHandleClick(v)}"
            android:paddingVertical="@dimen/_30sdp"
            android:text="@string/help"
            app:drawableStartCompat="@drawable/ic_help" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</layout>